--- a/foot.html
+++ b/foot.html
@@ -42,7 +42,7 @@
                         <ul class="list-unstyled">
                             <li><a href="#">Twitter</a></li>
                             <li><a href="#">Google +</a></li>
-                            <li><a href="#">Linked In</a></li>
+                            <li><a href="#">Instagram </a></li>
                             <li><a href="#">Facebook</a></li>
                         </ul>
                     </div>
