--- a/foot.html
+++ b/foot.html
@@ -5,13 +5,13 @@
         <div class="container">
             <div class="row ">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
-                    <div class="ft-logo"><img src="./assets/images/logo.png" alt=""></div>
+                    <div class="ft-logo"><img src="https://minicabee.co.uk/images/logo.png" alt=""></div>
                 </div>
             </div>
             <hr class="footer-line">
             <div class="row ">
                 <!-- footer-about -->
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-6 ">
+                <div class="col-xs-6 col-lg-3 col-md-4 col-sm-6 col-6 ">
                     <div class="footer-widget ">
                         <div class="footer-title">Company</div>
                         <ul class="list-unstyled">
@@ -24,7 +24,7 @@
                 </div>
                 <!-- /.footer-about -->
                 <!-- footer-links -->
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-6 ">
+                <div class="col-xs-6 col-lg-3 col-md-4 col-sm-6 col-6 ">
                     <div class="footer-widget ">
                         <div class="footer-title">Quick Links</div>
                         <ul class="list-unstyled">
@@ -33,10 +33,11 @@
                             <li><a href="#">FAQ</a></li>
                         </ul>
                     </div>
-                </div>
+                </div>  </div>
                 <!-- /.footer-links -->
                 <!-- footer-links -->
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-6 ">
+                 <div class="row ">
+                <div class="col-xs-5 col-lg-3 col-md-4 col-sm-6 col-6 ">
                     <div class="footer-widget ">
                         <div class="footer-title">Social</div>
                         <ul class="list-unstyled">
@@ -49,7 +50,7 @@
                 </div>
                 <!-- /.footer-links -->
                 <!-- footer-links -->
-                <div class="col-xl-3 col-lg-3 col-md-12 col-sm-6 col-6 ">
+                <div class="col-xs-7 col-lg-3 col-md-12 col-sm-6 col-6 ">
                     <div class="footer-widget ">
                         <h3 class="footer-title">Address</h3>
                        <ul class="list-unstyled">
@@ -59,10 +60,10 @@
                             
                         </ul>
                     </div>
-                </div>
+                </div></div>
                 <!-- /.footer-links -->
                 <!-- tiny-footer -->
-            </div>
+          
             <div class="row ">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 text-center ">
                     <div class="tiny-footer">
@@ -72,5 +73,5 @@
                 <!-- /. tiny-footer -->
             </div>
         </div>
-    </div>
+    </div></body></html>
     <!-- /.footer -->
