--- a/nav.html
+++ b/nav.html
@@ -4,14 +4,6 @@
   <title>Minicabee | </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="./assets/css/boot.min.css" rel="stylesheet" id="bootstrap-css">
-<link href="./assets/css/style.css" rel="stylesheet" id="bootstrap-css">
-<link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-<script src="./assets/js/bootstrap.min.js"></script>
-<script src="./assets/js/jquery.js"></script>
 </head>
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     	  <div class="container">
@@ -22,18 +14,18 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		  <div class="navbar-brand"><center><img src="./assets/images/logo.png" style="width:180px;margin-top:-22px;"></center></div>
+		  <div class="navbar-brand"><center><img src="https://minicabee.co.uk/images/logo.png" style="width:180px;margin-top:-22px;"></center></div>
 		    </div>
 		    <div class="collapse navbar-collapse" id="navbar-brand-centered">
 		      <ul class="nav navbar-nav navbar-right">
-		      	    <li><a href="index.html">Home</a></li>
-		        <li><a href="about">About</a></li>
-		        <li><a href="services">Services</a></li>
-		        <li><a href="areas">Areas we cover</a></li>
-		        <li><a href="airports">Airports</a></li>
-		        <li><a href="track">Track Bookings</a></li>
-		        <li><a href="cabpartner">Cab Partners</a></li>
-		        <li><a href="sign">Signin / Signup</a></li>	        
+		      	    <li><a href="http://localhost/minicabee/index.php">Home</a></li>
+		        <li><a href="http://localhost/minicabee/about">About</a></li>
+		        <li><a href="http://localhost/minicabee/services">Services</a></li>
+		        <li><a href="http://localhost/minicabee/areas">Areas we cover</a></li>
+		        <li><a href="http://localhost/minicabee/airports">Airports</a></li>
+		        <li><a href="http://localhost/minicabee/track">Track Bookings</a></li>
+		        <li><a href="http://localhost/minicabee/cabpartner">Cab Partners</a></li>
+		        <li><a href="http://localhost/minicabee/sign">Signin / Signup</a></li>	        
 		      </ul>
 		    </div>
 		  </div>
