--- a/foot.html
+++ b/foot.html
@@ -11,7 +11,7 @@
             <hr class="footer-line">
             <div class="row ">
                 <!-- footer-about -->
-                <div class="col-xs-6 col-lg-3 col-md-4 col-sm-6 col-6 ">
+                <div class="col-xs-6 col-xl-3 col-lg-3 col-md-4 col-sm-6 col-6 ">
                     <div class="footer-widget ">
                         <div class="footer-title">Company</div>
                         <ul class="list-unstyled">
@@ -24,7 +24,7 @@
                 </div>
                 <!-- /.footer-about -->
                 <!-- footer-links -->
-                <div class="col-xs-6 col-lg-3 col-md-4 col-sm-6 col-6 ">
+                <div class="col-xs-6 col-xl-3 col-lg-3 col-md-4 col-sm-6 col-6 ">
                     <div class="footer-widget ">
                         <div class="footer-title">Quick Links</div>
                         <ul class="list-unstyled">
@@ -33,11 +33,8 @@
                             <li><a href="#">FAQ</a></li>
                         </ul>
                     </div>
-                </div>  </div>
-                <!-- /.footer-links -->
-                <!-- footer-links -->
-                 <div class="row ">
-                <div class="col-xs-5 col-lg-3 col-md-4 col-sm-6 col-6 ">
+                </div> 
+                <div class="col-xs-5 col-xl-3 col-lg-3 col-md-4 col-sm-6 col-6 ">
                     <div class="footer-widget ">
                         <div class="footer-title">Social</div>
                         <ul class="list-unstyled">
@@ -48,9 +45,7 @@
                         </ul>
                     </div>
                 </div>
-                <!-- /.footer-links -->
-                <!-- footer-links -->
-                <div class="col-xs-7 col-lg-3 col-md-12 col-sm-6 col-6 ">
+                <div class="col-xs-5 col-xl-3 col-lg-3 col-md-4 col-sm-6 col-6 ">
                     <div class="footer-widget ">
                         <h3 class="footer-title">Address</h3>
                        <ul class="list-unstyled">
@@ -60,7 +55,7 @@
                             
                         </ul>
                     </div>
-                </div></div>
+                </div></div></div>
                 <!-- /.footer-links -->
                 <!-- tiny-footer -->
           
