--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-brand-centered">
             <ul class="nav navbar-nav">
-                <li><a href="http://localhost/minicabee/index.php">Home</a>
+                <li><a href="./index.php">Home</a>
                 </li>
-                <li><a href="http://localhost/minicabee/about">About</a>
+                <li><a href="./about">About</a>
                 </li>
-                <li><a href="http://localhost/minicabee/services">Services</a>
+                <li><a href="./services">Services</a>
                 </li>
-                <li><a href="http://localhost/minicabee/areas">Areas we cover</a>
+                <li><a href="./areas">Areas we cover</a>
                 </li>
-                <li><a href="http://localhost/minicabee/airports">Airports</a>
+                <li><a href="./airports">Airports</a>
                 </li>
-                <li><a href="http://localhost/minicabee/track">Track Bookings</a>
+                <li><a href="./track">Track Bookings</a>
                 </li>
-                <li><a href="http://localhost/minicabee/cabpartner">Cab Partners</a>
+                <li><a href="./cabpartner">Cab Partners</a>
                 </li>
-                <li><a href="http://localhost/minicabee/sign">Signin / Signup</a>
+                <li><a href="./sign">Signin / Signup</a>
                 </li>
             </ul>
         </div>
