--- a/index.html
+++ b/index.html
@@ -27,16 +27,12 @@
             </button>
             <div class="navbar-brand">
                 <center>
-                    <img src="https://minicabee.co.uk/images/logo.png" style="width:180px;margin-top:-22px;">
+                    <img src="./assets/images/logo.png" style="width:180px;margin-top:-22px;">
                 </center>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbar-brand-centered">
             <ul class="nav navbar-nav">
-                <li><a href="./index.php">Home</a>
-                </li>
-                <li><a href="./about">About</a>
-                </li>
                 <li><a href="./services">Services</a>
                 </li>
                 <li><a href="./areas">Areas we cover</a>
@@ -59,6 +55,10 @@
 <section class="main">
     <div class="container top">
         <div class="row">
+             <div class="col-md-5">
+            <h1>Birmingham to Heathrow Taxis & Minicabs</h1>
+              <p>Reliable | Safe & Secure | Trust</p>  
+            </div>
             <div class="col-md-7 col-xs-12">
                 <div class="card">
                     <div class="tabbable-panel margin-tops4 ">
@@ -66,11 +66,9 @@
                             <ul class="nav nav-tabs tabtop  tabsetting">
                                 <li class="active"> <a href="#1" data-toggle="tab">Minicabee</a> 
                                 </li>
-                                <li> <a href="#2" data-toggle="tab">Airport Journey</a> 
+                                <li> <a href="#2" data-toggle="tab">Airports</a> 
                                 </li>
-                                <li> <a href="#3" data-toggle="tab">Long Trips</a> 
-                                </li>
-                                <li> <a href="#4" data-toggle="tab"> Corporate Bookings </a> 
+                                <li> <a href="#3" data-toggle="tab"> Corporate <span class="hidden-sm hidden-xs">Bookings</span></a> 
                                 </li>
                             </ul>
                             <div class="tab-content">
@@ -90,20 +88,28 @@
                                         </div>
 
                                         <div class="col-md-4">
-                                            <button class="buttonvia" data-toggle="collapse" data-target="#demo">Need Via point ?</button>
+                                            <button class="buttonvia" data-toggle="collapse" data-target="#demo">Need Via?</button>
                                         </div>
                                         <div class="col-md-12">
+                                             <div class="inputWithIcon">
                                             <input id="autocomplete" class="controls" type="text" placeholder="Enter Pickup Location or Postcode " name="pick" required="" autocomplete="off">
+                                             <i class="fa fa-map-marker fa-lg fa-fw" aria-hidden="true"></i>  
+                                        </div>
                                         </div>
                                         <div id="demo" class="collapse">
                                             <div class="col-md-12">
+                                                 <div class="inputWithIcon">
                                                 <input id="autocomplete2" class="controls" type="text" placeholder="Add Via Point 1" name="pick" required="" autocomplete="off">
+                                                       <i class="fa fa-map-marker fa-lg fa-fw" aria-hidden="true"></i>  
+                                                </div>
                                             </div>
 
                                         </div>
                                         <div class="col-md-12">
+                                            <div class="inputWithIcon">
                                             <input id="autocomplete3" class="controls" type="text" placeholder="Enter Dropoff Location or Postcode" name="drop" required="" autocomplete="off">
-
+                                             <i class="fa fa-map-marker fa-lg fa-fw" aria-hidden="true"></i>  
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -178,16 +184,24 @@
 
 
                                         <div class="col-md-12">
+                                            <div class="inputWithIcon">
                                             <input id="autocomplete" class="controls" type="text" placeholder="Enter Pickup Airport or Location" name="pick" required="" autocomplete="off">
+                                             <i class="fa fa-map-marker fa-lg fa-fw" aria-hidden="true"></i>  
+                                            </div>
                                         </div>
                                         <div id="demo" class="collapse">
                                             <div class="col-md-12">
+                                                 <div class="inputWithIcon">
                                                 <input id="autocomplete" class="controls" type="text" placeholder="Enter Pickup Airport or Location" name="pick" required="" autocomplete="off">
+                                             <i class="fa fa-map-marker fa-lg fa-fw" aria-hidden="true"></i>  
+                                            </div>
                                             </div>
                                         </div>
                                         <div class="col-md-12">
+                                              <div class="inputWithIcon">
                                             <input id="autocomplete2" class="controls" type="text" placeholder="Enter Dropoff Airport or Location" name="drop" required="" autocomplete="off">
-
+                                             <i class="fa fa-map-marker fa-lg fa-fw" aria-hidden="true"></i>  
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -244,66 +258,8 @@
                                         <button class="buttonexplore">Get Instant Quote</button>
                                     </center>
                                 </div>
-                                <div class="tab-pane fade in" id="3">
-                                    <br>
-                                    <br>
-                                    <h4 class="heading4">Looking for Long Trip in Budget Fare!</h4>
-                                    <br>
-
-                                    <div class="row">
-
-                                        <div class="col-md-12">
-                                            <input id="autocomplete" class="controls" type="text" placeholder="Enter Pickup Postcode" name="pick" required="" autocomplete="off">
-                                        </div>
-                                        <div class="col-md-12">
-                                            <input id="autocomplete3" class="controls" type="text" placeholder="Enter Dropoff Postcode" name="drop" required="" autocomplete="off">
-
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-3">
-                                            <select class="selectit controls" name="np" required="">
-                                                <option value="1">1 Pass</option>
-                                                <option value="2">2 Pass</option>
-                                                <option value="3">3 Pass</option>
-                                                <option value="4">4 Pass</option>
-                                                <option value="5">5 Pass</option>
-                                                <option value="6">6 Pass</option>
-                                                <option value="7">7 Pass</option>
-                                                <option value="8">8 Pass</option>
-                                                <option value="9">9 Pass</option>
-                                                <option value="10">10 Pass</option>
-                                            </select>
-                                        </div>
-                                        <div class="col-md-3">
-                                            <select class="selectit controls" name="nl" data-toggle="tooltip" data-placement="auto" required="">
-                                                <option value="1" selected="">0 Lugg</option>
-                                                <option value="1">1 Lugg</option>
-                                                <option value="2">2 Lugg</option>
-                                                <option value="3">3 Lugg</option>
-                                                <option value="4">4 Lugg</option>
-                                                <option value="5">5 Lugg</option>
-                                                <option value="6">6 Lugg</option>
-                                                <option value="7">7 Lugg</option>
-                                                <option value="8">8 Lugg</option>
-                                                <option value="9">9 Lugg</option>
-                                                <option value="10">10 Lugg</option>
-                                            </select>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <input id="datetimepicker5" class="controls" type="text" placeholder="Pickup Date & Time" name="drop" required="" autocomplete="off">
-
-                                        </div>
-
-                                    </div>
-                                    <br>
-                                    <center>
-                                        <button class="buttonexplore">Get Instant Quote</button>
-                                    </center>
-                                </div>
-
-
-                                <div class="tab-pane  fade in" id="4">
+                           
+                                <div class="tab-pane  fade in" id="3">
                                     <br>
                                     <br>
                                     <h4 class="heading4">Huge Discounts on Group Bookings!</h4>
@@ -335,9 +291,9 @@
                     </div>
                 </div>
             </div>
+           
         </div>
     </div>
-
     <br>
     <br>
     <br>
@@ -349,9 +305,9 @@
 
 <section class="offers container hidden-sm hidden-xs">
 
-    <div class="carousel slide media-carousel cardwhite" id="media">
-        <div class="carousel-inner">
-            <div class="item  active container">
+    <div class="carousel slide media-carousel cardwhite " id="media">
+        <div class="carousel-inner ">
+            <div class="item  active container2">
                 <div class="row">
                     <div class="col-md-4 col-xs-12 padright">
                         <div class="row">
@@ -388,7 +344,7 @@
                     </div>
                 </div>
             </div>
-            <div class="item container">
+            <div class="item container2">
                 <div class="row">
                     <div class="col-md-4 padright">
                         <div class="row">
@@ -431,11 +387,6 @@
         <a data-slide="next" href="#media" class="right carousel-control">›</a>
 
     </div>
-    </div>
-    </div>
-    </div>
-
-
 </section>
 
 
