--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Minicabee |</title>
+    <title>Minicabee | Book Cheap Taxis & Minicabs Online</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./assets/css/boot.min.css" rel="stylesheet" id="bootstrap-css">
@@ -58,6 +58,9 @@
              <div class="col-md-5">
             <h1>Birmingham to Heathrow Taxis & Minicabs</h1>
               <p>Reliable | Safe & Secure | Trust</p>  
+                 <div class="offero">
+                 <h5>Book an Airport Ride and get 10 % instant discount now</h5>
+                 </div>
             </div>
             <div class="col-md-7 col-xs-12">
                 <div class="card">
