--- a/book/index.html
+++ b/book/index.html
@@ -155,7 +155,7 @@
                    <ul>
                            <li> <p><b>For Bookings: </b>+44 01293344804</p></li>
                            <li> <p><b>For instant Reply:</b> Initiate Live Chat</p></li>
-                           <li> <p><b>For Complaints:</b> complaints@gatwick-airporttaxis.com</p></li>
+                           <li> <p><b>For Complaints:</b> complaints@minicabee.co.uk</p></li>
                  </ul>
              </div>
                </div>
