--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <section class="main">
     <div class="container top">
         <div class="row">
-             <div class="col-md-5">
+             <div class="col-md-5 hidden-xs hidden-sm">
             <h1>Birmingham to Heathrow Taxis & Minicabs</h1>
               <p>Reliable | Safe & Secure | Trust</p>  
                  <div class="offero">
