--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <ul class="nav nav-tabs tabtop  tabsetting">
                                 <li class="active"> <a href="#1" data-toggle="tab">Minicabee</a> 
                                 </li>
-                                <li> <a href="#2" data-toggle="tab">Airport Trip</a> 
+                                <li> <a href="#2" data-toggle="tab">Airports</a> 
                                 </li>
                                 <li> <a href="#3" data-toggle="tab"> Corporate <span class="hidden-sm hidden-xs">Bookings</span></a> 
                                 </li>
