--- a/index.html
+++ b/index.html
@@ -32,12 +32,8 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbar-brand-centered">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav navbar-right">
                 <li><a href="./services">Services</a>
-                </li>
-                <li><a href="./areas">Areas we cover</a>
-                </li>
-                <li><a href="./airports">Airports</a>
                 </li>
                 <li><a href="./track">Track Bookings</a>
                 </li>
@@ -411,7 +407,7 @@
             <p>Using Minicab Services in United Kingdom is Usual but you want to be your minicab ride with comfortable price and comfortable time with quality of service works only at Minicabee, We cover all over United Kingdom especially airports ,stations
                 , sea ports , hotels , schools , universities , hospitals , events ,etc,... Book a cheap taxi online in MiniCabee and enjoy your ride with best in class . MiniCabee offer taxis for all your needs in all around UK.
             </p>
-        </div>
+        </div></div>
 </section>
 
 
@@ -481,7 +477,96 @@
 
 <br>
 <br>
-
+<!--footer starts from here-->
+<footer class="footer hidden-sm hidden-xs">
+    <div class="container">
+<div class="row topping">
+      <div class="col-md-3 col-xs-6">
+        <p>Locations</p>
+    <ul>  
+            <li><a href="#">Heathrow Taxi</a></li>
+        <li><a href="#">Gatwick Taxi</a></li>
+        <li><a href="#">Birmingham Taxi</a></li>
+        <li><a href="#">Liverpool Taxi</a></li>
+        <li><a href="#">Manchester Taxi</a></li>
+        <li><a href="#">London Taxi</a></li>
+        <li><a href="#">Cardiff Taxi</a></li>
+        <li><a href="#">Norwich Taxi</a></li>
+        <li><a href="#">Lincoln Taxi</a></li>
+        <li><a href="#">Plymouth Taxi</a></li>
+        <li><a href="#">Guildford Taxi</a></li>
+        <li><a href="#">Doncaster Taxi</a></li>
+        <li><a hrf="">Leicestershire Taxi</a></li>
+        <li><a hrf="">Aberdeen Taxi</a></li>
+        <li><a hrf="">Sheffield Taxi</a></li>
+        <li><a hrf="">Oxford Taxi</a></li>
+    </ul>
+    </div>
+     <div class="col-md-3 col-xs-6">
+        <p>AIRPORTS</p>
+    <ul>  
+            <li><a href="#">Heathrow Airport Taxi</a></li>
+        <li><a href="#">Gatwick Airport Taxi</a></li>
+        <li><a href="#">Birmingham Airport Taxi</a></li>
+        <li><a href="#">London Airport Taxi</a></li>
+        <li><a href="#">Stansted Airport Taxi</a></li>
+        <li><a href="#">Luton Airport Taxi</a></li>
+        <li><a href="#">London City Airport Taxi</a></li>
+        <li><a href="#">Manchester Airport Taxi</a></li>
+        <li><a href="#">Edinburgh Airport Taxi</a></li>
+        <li><a href="#">Glasgow Airport Taxi</a></li>
+        <li><a href="#">Birmingham Airport Taxi</a></li>
+        <li><a href="#">Liverpool Airport Taxi</a></li>
+    </ul>
+    </div>
+     <div class="col-md-3 col-xs-6">
+        <p>TRAIN STATIONS</p>
+    <ul>  
+        <li><a href="#">Birmingham New Street Station Taxi</a></li>
+        <li><a href="#">Euston Station Taxi</a></li>
+        <li><a href="#">Manchester Piccadilly Station Taxi</a></li>
+        <li><a href="#">Paddington Station Taxi</a></li>
+        <li><a href="#">Stratford Station Taxi</a></li>
+        <li><a href="#">Charing Cross Station Taxi</a></li>
+        <li><a href="#">Reading Station Taxi</a></li>
+        <li><a href="#">Victoria Station Taxi</a></li>
+        <li><a href="#">Kings Cross Station Taxi</a></li>
+    </ul>
+    </div>
+      <div class="col-md-3 col-xs-6">
+        <p>COMPANY</p>
+    <ul>  
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Locations</a></li>
+        <li><a href="#">Discounts</a></li>
+        <li><a href="#">Book a Ride</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms & Conditions</a></li>
+    </ul>
+    </div>
+    </div>
+    </div>
+</footer>
+     <div class="darkfooter">
+         <div class="container">
+             <div class="row">
+                  <div class="col-md-6">
+                   <p>© Copyrights 2019 Minicabee. All rights reserved.</p>
+                 </div>
+                 <div class="col-md-6 hidden-sm hidden-xs">
+             <ul>
+                 <li>Sitemap</li>
+                <li>Contact</li>
+                 <li>Help</li>
+                 <li>Terms & Conditions</li>
+             </ul>
+                 </div>
+                
+             </div>
+             
+             </div>
+    </div>
+ <!--footer starts from here-->
 <script>
     $(document).ready(function() {
         $.datetimepicker.setLocale('pt-EN');
