--- a/login/index.html
+++ b/login/index.html
@@ -30,8 +30,8 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbar-brand-centered">
-              <div class="collapse navbar-collapse" id="navbar-brand-centered">
-             <ul class="nav navbar-nav navbar-right">
+             <div class="collapse navbar-collapse" id="navbar-brand-centered">
+            <ul class="nav navbar-nav navbar-right">
                 <li><a href="../services">Services</a>
                 </li>
                 <li><a href="../track">Track Bookings</a>
@@ -47,86 +47,33 @@
 </nav>
 <section class="about abbanner container">
     <div class=" topper">
-    	<center><h2>Cab Partner</h2>
+    	<center><h2>Login</h2>
         <img src="../assets/images/line-under.png">
     	</center>
-      <center>     <h3>Looking for attaching fleet with us ?</h3></center>
-<br><br>
+      <center>     <h3>Enter and Book Cheap Taxis & Minicabs!</h3></center>
+<br>
+          <div class="row">
+              <div class="col-md-3"></div>
+              <div class="col-md-6">
       <div class="regi">
         <div class="container1">
-            <br><br>
-        <div class="row">
-        <div class="col-md-6">
-     <input  class="controls" type="text" placeholder="Enter Company Name* " name="pick" required="" >
-   </div>
-    <div class="col-md-6">
-     <input  class="controls" type="text" placeholder="Enter Legal Name* " name="pick" required="" >
-     </div>
-   </div>
-        <div class="row">
-        <div class="col-md-6">
-     <input  class="controls" type="text" placeholder="Enter Phone Number eg: +44 1234 567890*" name="pick" required="" >
-   </div>
-    <div class="col-md-6">
-     <input  class="controls" type="text" placeholder="Enter Alternate Number" name="pick" >
-     </div>
-   </div>
-        <div class="row">
-        <div class="col-md-6">
-     <input  class="controls" type="text" placeholder="Enter Person Name to Contact* " name="pick" required="" >
-   </div>
-    <div class="col-md-6">
-     <input  class="controls" type="text" placeholder="Enter Contact Email Address*" name="pick" required="" >
-     </div>
-   </div>
-           <div class="row">
-        <div class="col-md-6">
-     <input  class="controls" type="text" placeholder="Enter Website Url if available " name="pick" >
-   </div>
-    <div class="col-md-6">
-     <input  class="controls" type="text" placeholder="Enter Booking Email Address" name="pick"  >
-     </div>
-   </div>
-    <div class="row">
-        <div class="col-md-6">
-     <input  class="controls" type="text" placeholder="Enter Covering Areas eg: Heathrow, gatwick...* " name="pick" required="" >
-   </div>
-    <div class="col-md-6">
-     <input  class="controls" type="text" placeholder="Enter Covering Range eg: 0 to 10 miles*" name="pick" required="" >
-     </div>
-   </div>
-       <div class="row">
-        <div class="col-md-6">
-     <input  class="controls" type="text" placeholder="Are you available 24/7 eg: yes or No *" name="pick" required="" >
-   </div>
-    <div class="col-md-6">
-     <input  class="controls" type="text" placeholder="Enter Size of your Fleet eg: 1-10, 10-20.. *" name="pick" required="" >
-     </div>
-   </div>
-   <div class="row">
-        <div class="col-md-6">
-     <input  class="controls" type="text" placeholder="Private Hire Operator Licence Number *" name="pick" required="" >
-   </div>
-    <div class="col-md-6">
-     <input  class="controls" type="text"  placeholder="Licence expires on eg: 20th March 2017*" name="pick" required="" >
-     </div>
-   </div>
-      <div class="row">
-        <div class="col-md-6">
-     <input  class="controls" type="text" placeholder="Full Office Address *" name="pick" required="" >
-   </div>
-    <div class="col-md-6">
-     <input  class="controls" type="text"  placeholder="Licensing Local Authority & Type *" name="pick" required="" >
-     </div>
-   </div>
-     <div class="row">
-        <div class="col-md-12">
-   <textarea  class="controls textarea"  type="text" placeholder="Enter your Queries for us *" name="drop" ></textarea>
-   </div>
-   </div>
-            <center><button class="buttonexplore">Join with Minicabee</button></center>
             <br>
+        <div class="row">
+    <div class="col-md-12">
+     <input  class="controls" type="text" placeholder="Enter Email Address or Customer Id* " name="pick" required="" >
+     </div>
+           <div class="col-md-12">
+     <input  class="controls" type="text" placeholder="Enter Password* " name="pick" required="" >
+   </div>
+
+   </div>
+ 
+            <center><button class="buttonexplore">Login Now</button></center>
+            <a href="../sign">New to Minicabee?</a>
           </div>  </div></div>
+              <div class="col-md-4"></div>
+        </div>
+    </div>
     </section>
 <br><br>
         <!--footer starts from here-->
@@ -218,7 +165,8 @@
              
              </div>
     </div>
- <!--footer starts from here-->
-    </body>
+ <!--footer starts from here-->     
+    </body></html>
+
 
 
