--- a/promotions/success.html
+++ b/promotions/success.html
@@ -146,7 +146,7 @@ a, a:hover {
 		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0;
 			padding-top: 20px;" class="hero"><a target="_blank" style="text-decoration: none;"
 			href="https://github.com/konsav/email-templates/"><img border="0" vspace="0" hspace="0"
-			src="https://image.freepik.com/free-vector/flat-banner-city-yellow-taxi-rides-ordered-route_81534-379.jpg"
+			src="../assets/images/promotions.jpg"
 			alt="Please enable images to view this content" title="Hero Image"
 			width="560" style="
 			width: 100%;
