--- a/promotions/sign.html
+++ b/promotions/sign.html
@@ -130,7 +130,7 @@ a, a:hover {
              letter-spacing:0.9px;                                  
 			color: #000000;
 			font-family: 'Lato', sans-serif;" class="header">
-				Welcome offer for  first taxi ride!
+				Hey is that you signed up!
 		</td>
 	</tr>
 
@@ -139,7 +139,7 @@ a, a:hover {
 			padding-top: 5px;
 			color: #000000;
 			font-family: 'Lato', sans-serif;" class="subheader">
-				The best way to save your money
+				Welcome offer waiting for you 
 		</td>
 	</tr>
 	<tr>
@@ -158,7 +158,7 @@ a, a:hover {
 		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0; padding-left: 6.25%; padding-right: 6.25%; width: 87.5%; font-size: 18px; font-weight: 500; line-height: 35px;letter-spacing: 0.6px;
 			color: #000000;
 			font-family: 'Lato', sans-serif;" class="paragraph">
-				Use the code  <span style="color:red;font-weight:bold;">MCE20</span> and get your flat 20% offer on your first ride with us.  
+				This Email is to confirm your account in Minicabee Taxi Quote Comparison
 		</td>
 	</tr>
 
@@ -171,7 +171,7 @@ a, a:hover {
 					bgcolor="#2bc15b"><a target="_blank" href="https://minicabee.co.uk" style="text-decoration:none !important;
 					color: #FFFFFF;font-family: 'Lato', sans-serif; font-size: 17px; font-weight: 400; line-height: 120%;"
 					href="">
-						Book Now
+						Confirm Account
 					</a>
 			</td></tr></table></a>
 		</td>
@@ -186,72 +186,6 @@ a, a:hover {
 		</td>
 	</tr>
 
-	<!-- LIST -->
-	<tr>
-		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0; padding-left: 6.25%; padding-right: 6.25%;" class="list-item"><table align="center" border="0" cellspacing="0" cellpadding="0" style="width: inherit; margin: 0; padding: 0; border-collapse: collapse; border-spacing: 0;">
-			
-			<!-- LIST ITEM -->
-			<tr>
-
-				<!-- LIST ITEM IMAGE -->
-				<!-- Image text color should be opposite to background color. Set your url, image src, alt and title. Alt text should fit the image size. Real image size should be x2 -->
-				<td align="left" valign="top" style="border-collapse: collapse; border-spacing: 0;
-					padding-top: 30px;
-					padding-right: 20px;"><img
-				border="0" vspace="0" hspace="0" style="padding: 0; margin: 0; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; border: none; display: block;
-					color: #000000;"
-					src="http://ishu.890m.com/parking.png"
-					alt="H" title="Highly compatible"
-					width="50" height="50"></td>
-
-				<!-- LIST ITEM TEXT -->
-				<!-- Set text color and font family ("sans-serif" or "Georgia, serif"). Duplicate all text styles in links, including line-height -->
-				<td align="left" valign="top" style="font-size: 16px;  line-height: 160%; border-collapse: collapse; border-spacing: 0; margin: 0; padding:0;letter-spacing: 0.5px;
-					padding-top: 25px;
-					color: #000000;
-					font-family: 'Lato', sans-serif;" class="paragraph">
-						<b style="color: #333333;font-weight: 900;">No Waiting and Parking Charges</b><br/>
-						Guarnteed no additional hidden charges apart from Taxi fare, unless it is Plastic payments.
-				</td>
-
-			</tr>
-
-			<!-- LIST ITEM -->
-			<tr>
-
-				<td align="left" valign="top" style="border-collapse: collapse; border-spacing: 0;
-					padding-top: 30px;
-					padding-right: 20px;"><img
-				border="0" vspace="0" hspace="0" style="padding: 0; margin: 0; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; border: none; display: block;
-					color: #000000;"
-					src="http://ishu.890m.com/advantages.png"
-					alt="D" title="Designer friendly"
-					width="50" height="50"></td>
-
-						<td align="left" valign="top" style="font-size: 16px;  line-height: 160%; border-collapse: collapse; border-spacing: 0; margin: 0; padding:0;letter-spacing: 0.5px;
-					padding-top: 25px;
-					color: #000000;
-					font-family: 'Lato', sans-serif;" class="paragraph">
-						<b style="color: #333333;font-weight: 900;">Compare and Book Cheaper Taxis</b><br/>
-						Choose your comfortable Taxis based on your requirements and ride comfortably .
-				</td>
-
-			</tr>
-
-		</table></td>
-	</tr>
-
-	<!-- LINE -->
-	<!-- Set line color -->
-	<tr>
-		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0; padding-left: 6.25%; padding-right: 6.25%; width: 87.5%;
-			padding-top: 25px;" class="line"><hr
-			color="#E0E0E0" align="center" width="100%" size="1" noshade style="margin: 0; padding: 0;" />
-		</td>
-	</tr>
-
-	<!-- PARAGRAPH -->
-	<!-- Set text color and font family ("sans-serif" or "Georgia, serif"). Duplicate all text styles in links, including line-height -->
 	<tr>
 		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0; padding-left: 6.25%; padding-right: 6.25%; width: 87.5%; font-size: 17px; font-weight: 400; line-height: 160%;
 			padding-top: 20px;
@@ -318,8 +252,7 @@ a, a:hover {
 			color: #999999;
 			font-family: sans-serif;" class="footer">
 
-				This email was sent to you in order to avail the offers of Minicabee
- Quote.
+				This email was sent to you in order to confirm account with Minicabee.
 
 
 		</td>
