--- a/promotions/booking.html
+++ b/promotions/booking.html
@@ -103,7 +103,7 @@ a, a:hover {
 		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0;
 			padding-top: 20px;" class="hero"><a target="_blank" style="text-decoration: none;"
 			href=""><img border="0" vspace="0" hspace="0"
-			src="https://startersup.github.io/minicabee/assets/images/onlinebook.jpg"
+			src="../assets/images/onlinebook.jpg"
 			alt="Please enable images to view this content" title="Minicabee Banner"
 			width="560" style="
 			width: 100%;
