--- a/promotions/driver.html
+++ b/promotions/driver.html
@@ -114,7 +114,7 @@ a, a:hover {
 						<td valign="top" class="side title" style="border-collapse: collapse;border: 0;margin: 0;padding: 10px;-webkit-text-size-adjust: none;color: #555559;font-family: 'Lato', sans-serif;font-size: 16px;line-height: 26px;vertical-align: top;background-color: white;border-top: none;">
 							<table style="font-weight: normal;border-collapse: collapse;border: 0;margin: 0;padding: 0;font-family: Arial, sans-serif;">
 								<div class="mktEditable" id="main_text">
-										<p style="font-family: 'Lato', sans-serif;line-height: 30px;font-size:18px;">Hello <b>'.$name.'</b>, We have received your booking now, kindly check the below provided information and reconfirm us by tapping the button below.</p>
+										<p style="font-family: 'Lato', sans-serif;line-height: 30px;font-size:18px;">Hello <b>'.$name.'</b>, here is your driver details for your journey, kindly connect with him before the journey.</p>
 									</div>
 				
 									
