--- a/user/index.html
+++ b/user/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>Minicabee |</title>
+    <title>Welcome Saicharan | Minicabee Travel Solutions</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../assets/css/boot.min.css" rel="stylesheet" id="bootstrap-css">
     <link href="../assets/css/style.css" rel="stylesheet" id="bootstrap-css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:400,700" rel="stylesheet">
