--- a/user/index.html
+++ b/user/index.html
@@ -275,13 +275,12 @@
                             </div>
                             <table id="mytable" class="table table-bordred table-striped">
                                 <thead class="header">
-                                    <th style="width:5%;">Ref Id</th>
-                                    <th style="width:20%;">Pickup From</th>
-                                    <th style="width:20%;">Dropoff To</th>
-                                    <th style="width:15%;">Date /Time</th>
-                                    <th style="width:15%;">Cab Type</th>
-                                    <th style="width:10%;">Total Fare</th>
-                                    <th style="width:8%;">Status</th>
+                                    <th>Ref Id</th>
+                                    <th>Pickup From</th>
+                                    <th>Dropoff To</th>
+                                    <th>Date /Time</th>
+                                    <th>Total Fare</th>
+                                    <th>Invoice</th>
                                 </thead>
                                 <tbody id="myTable">
                                     <tr>
@@ -289,9 +288,8 @@
                                         <td>Gatwick Airport South Terminal</td>
                                         <td>Heathrow Airport Terminal 5</td>
                                         <td>2018-11-15 19:20:00</td>
-                                        <td>SALOON CAR x 1</td>
                                         <td>£ 7.00</td>
-                                        <td><span style="color:#ffffff;background-color:rgb(23, 23, 255);font-weight:500;letter-spacing:0.5px;padding:5px;border-radius:4px;">Booked</span>
+                                        <td><span style="color:#ffffff;background-color:green;font-weight:500;letter-spacing:0.5px;padding:5px;border-radius:4px;">View</span>
                                         </td>
                                     </tr>
                                     <tr>
@@ -299,9 +297,8 @@
                                         <td>Gatwick Airport South Terminal</td>
                                         <td>Heathrow Airport Terminal 5</td>
                                         <td>2018-11-15 19:20:00</td>
-                                        <td>SALOON CAR x 1</td>
                                         <td>£ 7.00</td>
-                                        <td><span style="color:#ffffff;background-color:#15ce2b;font-weight:500;letter-spacing:0.5px;padding:5px;border-radius:4px;">Completed</span>
+                                       <td><span style="color:#ffffff;background-color:green;font-weight:500;letter-spacing:0.5px;padding:5px;border-radius:4px;">View</span>
                                         </td>
                                     </tr>
                                     <tr>
@@ -309,9 +306,8 @@
                                         <td>Gatwick Airport South Terminal</td>
                                         <td>Heathrow Airport Terminal 5</td>
                                         <td>2018-11-15 19:20:00</td>
-                                        <td>SALOON CAR x 1</td>
                                         <td>£ 7.00</td>
-                                        <td><span style="color:#ffffff;background-color:#ff0033;font-weight:500;letter-spacing:0.5px;padding:5px;border-radius:4px;">Cancelled</span>
+                                        <td><span style="color:#ffffff;background-color:green;font-weight:500;letter-spacing:0.5px;padding:5px;border-radius:4px;">View</span>
                                         </td>
                                     </tr>
                                     <tr>
@@ -319,15 +315,39 @@
                                         <td>Gatwick Airport South Terminal</td>
                                         <td>Heathrow Airport Terminal 5</td>
                                         <td>2018-11-15 19:20:00</td>
-                                        <td>SALOON CAR x 1</td>
                                         <td>£ 7.00</td>
-                                        <td><span style="color:#ffffff;background-color:rgb(23, 23, 255);font-weight:500;letter-spacing:0.5px;padding:5px;border-radius:4px;">Booked</span>
+                                        <td><span style="color:#ffffff;background-color:green;font-weight:500;letter-spacing:0.5px;padding:5px;border-radius:4px;">View</span>
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td>BRT1234</td>
+                                        <td>Gatwick Airport South Terminal</td>
+                                        <td>Heathrow Airport Terminal 5</td>
+                                        <td>2018-11-15 19:20:00</td>
+                                        <td>£ 7.00</td>
+                                        <td><span style="color:#ffffff;background-color:green;font-weight:500;letter-spacing:0.5px;padding:5px;border-radius:4px;">View</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>BRT1234</td>
+                                        <td>Gatwick Airport South Terminal</td>
+                                        <td>Heathrow Airport Terminal 5</td>
+                                        <td>2018-11-15 19:20:00</td>
+                                        <td>£ 7.00</td>
+                                        <td><span style="color:#ffffff;background-color:green;font-weight:500;letter-spacing:0.5px;padding:5px;border-radius:4px;">View</span>
+                                        </td>
+                                    </tr>
+                                    
 
                                 </tbody>
                             </table>
 
+                        </div>
+                         <div class="tab-pane fade" id="help">
+                             <h3>Booking Policy </h3>
+                             <p>You will automatically receive the 'Minicabee Journey Acknowledgement' email for the journey(s) you have paid for. You are responsible for checking that the details received to us are correct.You will manually receive a 'Journey Details' email when the journey has been assigned to a driver. This will contain the pick up instructions and the driver's telephone number. Britannia Cars will not refund you if you have forgotten to take this with you.</p>
+                             <h3>Pricing</h3>
+                             <p>Minicabee prices are calculated Automatically with the distance, time of travel and number of passengers traveling taken into consideration. Britannia Cars reserves the right to provide an upgraded car type from the original selected if your chosen vehicle is unavailable.All bookings must be made through the office either via the website, telephone or e-mail. In this way confirmations are sent out and the journey is insured. Britannia Cars use their own transport wherever possible but do use third party companies where appropriate. Reservations made for service on the following timings and dates will be subject to an additional 50% surcharge on published prices: 18:00 24th December to 23:59 26th December, 18:00 31st December to 23:59 1st January, other days may also be affected.</p>
                         </div>
                         
                     </div>
