--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 </li>
                 <li><a href="./sign">Signin / Signup</a>
                 </li>
+                <li><a class="righter">Call us :+44 1293 344 804</a></li>
             </ul>
         </div>
     </div>
