--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                     <br>
 
                                     <div class="row">
-                                        <div class="col-md-8">
+                                        <div class="col-md-10 col-xs-9">
                                             <select id="way" class="selectit controls" name="np" required="">
                                                 <option value="oneway">Single Way</option>
                                                 <option value="twoway">Two Way</option>
@@ -88,8 +88,8 @@
                                             </select>
                                         </div>
 
-                                        <div class="col-md-4">
-                                            <button class="buttonvia" data-toggle="collapse" data-target="#demo">Need Via?</button>
+                                        <div class="col-md-2 col-xs-2">
+                                            <button class="buttonvia" data-toggle="collapse" data-target="#demo">+Via</button>
                                         </div>
                                         <div class="col-md-12">
                                              <div class="inputWithIcon">
@@ -100,7 +100,7 @@
                                         <div id="demo" class="collapse">
                                             <div class="col-md-12">
                                                  <div class="inputWithIcon">
-                                                <input id="autocomplete2" class="controls" type="text" placeholder="Add Via Point 1" name="pick" required="" autocomplete="off">
+                                                <input id="autocomplete2" class="controls" type="text" placeholder="Add Via Point" name="pick" required="" autocomplete="off">
                                                        <i class="fa fa-map-marker fa-lg fa-fw" aria-hidden="true"></i>  
                                                 </div>
                                             </div>
