--- a/cabpartner/index.html
+++ b/cabpartner/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Minicabee |</title>
+    <title>Cab Partners | Minicabee Travel solutions.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
      <link rel="icon" href="../assets/images/favicon.png" type="image/x-icon"  sizes="16x16" />
