--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </button>
             <div class="navbar-brand">
                 <center>
-                    <img src="./assets/images/logo.png" style="width:180px;margin-top:-22px;">
+                    <img src="https://minicabee.co.uk/images/logo.png" style="width:180px;margin-top:-22px;">
                 </center>
             </div>
         </div>
