--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
                                         </div>
                                         <div class="col-md-12">
                                              <div class="inputWithIcon">
-                                            <input id="autocomplete" class="controls" type="text" placeholder="Enter Pickup Location or Postcode " name="pick" required="" autocomplete="off">
+                                            <input id="autocomplete" class="controls" type="text" placeholder="Enter Pickup Location or Postcode " name="pick" required="" >
                                              <i class="fa fa-map-marker fa-lg fa-fw" aria-hidden="true"></i>  
                                         </div>
                                         </div>
                                         <div id="demo" class="collapse">
                                             <div class="col-md-12">
                                                  <div class="inputWithIcon">
-                                                <input id="autocomplete2" class="controls" type="text" placeholder="Add Via Point" name="pick" required="" autocomplete="off">
+                                                <input id="autocomplete2" class="controls" type="text" placeholder="Add Via Point" name="pick" required="" >
                                                        <i class="fa fa-map-marker fa-lg fa-fw" aria-hidden="true"></i>  
                                                 </div>
                                             </div>
@@ -108,7 +108,7 @@
                                         </div>
                                         <div class="col-md-12">
                                             <div class="inputWithIcon">
-                                            <input id="autocomplete3" class="controls" type="text" placeholder="Enter Dropoff Location or Postcode" name="drop" required="" autocomplete="off">
+                                            <input id="autocomplete3" class="controls" type="text" placeholder="Enter Dropoff Location or Postcode" name="drop" required="" >
                                              <i class="fa fa-map-marker fa-lg fa-fw" aria-hidden="true"></i>  
                                             </div>
                                         </div>
@@ -184,7 +184,7 @@
                                         </div>
 
 
-                                        <div class="col-md-12">
+                                        <!-- <div class="col-md-12">
                                             <div class="inputWithIcon">
                                             <input id="autocomplete" class="controls" type="text" placeholder="Enter Pickup Airport or Location" name="pick" required="" autocomplete="off">
                                              <i class="fa fa-map-marker fa-lg fa-fw" aria-hidden="true"></i>  
@@ -203,7 +203,7 @@
                                             <input id="autocomplete2" class="controls" type="text" placeholder="Enter Dropoff Airport or Location" name="drop" required="" autocomplete="off">
                                              <i class="fa fa-map-marker fa-lg fa-fw" aria-hidden="true"></i>  
                                             </div>
-                                        </div>
+                                        </div> -->
                                     </div>
                                     <div class="row">
                                         <div class="col-md-3">
