--- a/index.html
+++ b/index.html
@@ -791,4 +791,4 @@
         });
     });
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBauQAxB_oaAk4z-NQN2BkhmD4AxzA2l6M&libraries=places&callback=initAutocomplete" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBauQAxB_oaAk4z-NQN2BkhmD4AxzA2l6M&libraries=places&callback=initAutocomplete" ></script>
